WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147191
[EFL] The "Missing Plug-in" buttons are not showing up on some flash contents
https://bugs.webkit.org/show_bug.cgi?id=147191
Summary
[EFL] The "Missing Plug-in" buttons are not showing up on some flash contents
Sungmann Cho
Reported
2015-07-22 07:57:09 PDT
Created
attachment 257268
[details]
a test content taken from
http://www.youku.com/
Currently, WebKitEFL doesn't show the "Missing Plug-in" buttons if the plugin-related tags don't have a "type" attribute. In such a case, WebCore tries to guess the MIME type from the extensions by using MIMETypeRegistry::getMIMETypeForExtension(). For WebKitEFL, MIMETypeRegistry::getMIMETypeForExtension() goes through |extensionMap|, which is a simple array of <extension, mime type>, looking for the mime type for the given extension. But |extensionMap| in MIMETypeRegistryEfl.cpp doesn't have the information for ".swf", so WebCore fails to guess the MIME type and regard the content type as ObjectContentFrame, not ObjectContentNetscapePlugin.
Attachments
a test content taken from http://www.youku.com/
(354 bytes, text/html)
2015-07-22 07:57 PDT
,
Sungmann Cho
no flags
Details
Patch
(1.99 KB, patch)
2015-07-22 08:00 PDT
,
Sungmann Cho
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sungmann Cho
Comment 1
2015-07-22 08:00:49 PDT
Created
attachment 257269
[details]
Patch
Sungmann Cho
Comment 2
2015-07-22 08:11:38 PDT
WebKitGTK+ also had the same problem and the issue has now been resolved.
http://trac.webkit.org/changeset/186581
Gyuyoung Kim
Comment 3
2015-07-22 17:28:24 PDT
Comment on
attachment 257269
[details]
Patch nice fix. r=me.
WebKit Commit Bot
Comment 4
2015-07-22 20:37:51 PDT
Comment on
attachment 257269
[details]
Patch Clearing flags on attachment: 257269 Committed
r187206
: <
http://trac.webkit.org/changeset/187206
>
WebKit Commit Bot
Comment 5
2015-07-22 20:37:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug